# MARV-ROS

./: .gitignore  README.md  marv_package.service  marv_restart.sh  marv_start.sh  marv_stop.sh  reach setup  rns_start.sh
WEB-UI/: .gitignore  CMakeLists.txt  package-lock.json  package.json  package.xml
colcon_ws/: .gitignore  README.md
colcon_ws/src/marv_driver/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/marv_driver/config/: scenarios.yaml
colcon_ws/src/marv_driver/launch/: marv_driver.launch.py
colcon_ws/src/marv_driver/marv_driver/: marv_can_bridge.py  marv_power_management.py  marv_sbg_interface.py  marv_scenario_handler.py
colcon_ws/src/marv_driver/resource/: marv.dbc
colcon_ws/src/marv_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/marv_scenarios/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/marv_scenarios/config/: parameters.yaml
colcon_ws/src/marv_scenarios/launch/: marv_scenarios.launch.py
colcon_ws/src/marv_scenarios/marv_scenarios/: example_scenario.py  heading_controller_test.py  remote_network_steering.py  set_reference_position.py  test_constant_velocity.py  test_constant_velocity_lqi.py  test_throttle.py  test_throttle_ramp.py  thrust_controller_test.py  thrust_test.py  waypoint_navigation.py
colcon_ws/src/marv_scenarios/resource/: fyrkant2_export.csv  fyrkant_export.csv  heading_fir.csv  mjuk_export.csv  sok2_export.csv  sok_export.csv  special1_export.csv  test_export.csv  test_ockero_export.csv  thrust_fir.csv  (+6 more)
start_scripts/: canconfig.sh  marv_start.sh  start_ros_bag.sh  start_specific_ros_bag.sh
(+2 files in other folders)
